--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -121,7 +121,7 @@
             <h4 class="panel-title"><a data-toggle="collapse"data-parent="#accordion"href="#collapsefive">样本管理</a></h4>
         </div>
         <div id="collapsefive" class="panel-collapse collapse">
-            <a class="panel-body list-group-item " href="#">样本查询</a>
+            <a class="panel-body list-group-item " href="/surch">样本查询</a>
             <a class="panel-body list-group-item " href="/admin/ybk/apply/add/">新增申请单</a>
             <a class="panel-body list-group-item " href="/admin/ybk/apply/">查看申请单记录</a>
             <a class="panel-body list-group-item " href="/admin/ybk/outlist/add/">新建出库单</a>
