分装模板跟新

--- a/templates/fenzh.html
+++ b/templates/fenzh.html
@@ -11,12 +11,23 @@ container
 {% block content %}
     <div class="row">
         <div class="col-lg-4 panel panel-primary">
-        <div class="panel-heading">Panel heading without title</div>
+        <div class="panel-heading">待分装标本</div>
         <div class="panel-body">
-            Panel content
+            选择类型<select id="leixing" name="类型" class="select2-dropdown">
+                <option value="0">全血</option>
+            　　<option value="1">尿</option>
+            　　<option value="2">组织</option>
+            　　<option value="3">精液</option>
+            　　<option value="4">卵泡液</option>
+            　　<option value="5">毛发</option>  　　
+
+
+            </select>
+
+            
         </div>
         <div class="panel-footer">
-            Panel content
+            标本列
         </div>
 
 
@@ -25,22 +36,22 @@ container
 
         </div>
         <div class="col-lg-4 panel panel-default">
-        <div class="panel-heading">Panel heading without title</div>
+        <div class="panel-heading">分装</div>
         <div class="panel-body">
-            Panel content
+            模板
         </div>
         <div class="panel-footer">
-            Panel content
+            条目
         </div>
 
         </div>
         <div class="col-lg-4 panel panel-primary">
-        <div class="panel-heading">Panel heading without title</div>
+        <div class="panel-heading">已分装标本</div>
         <div class="panel-body">
-            Panel content
+            筛选区
         </div>
         <div class="panel-footer">
-            Panel content
+            条目
         </div>
 
         </div>
